# somfy-dongle-rs

./: Cargo.toml  README.md
somfy-rts/: Cargo.toml
somfy-rts-cli/: Cargo.toml
somfy-rts-cli/src/: main.rs
somfy-rts-mqtt/: Cargo.toml  somfy-rts-mqtt.openrc  somfy-rts-mqtt.service
somfy-rts-mqtt/src/: ha.rs  main.rs  somfy.rs
somfy-rts/src/: lib.rs
somfy-rts/src/api/: error.rs  mod.rs  model.rs  read.rs  ser.rs
