[package]
name = "somfy-rts-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
somfy-rts = { path = "../somfy-rts" }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
