[package]
name = "somfy-rts-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somfy-rts = { path = "../somfy-rts" }
rumqttc = "0.20.0"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"
futures = "0.3.28"
log = "0.4.17"
fern = "0.6.2"
humantime = "2.1.0"
